# scrawl

./: Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  desc.txt  env.sh
autom4te.cache/: output.0  traces.0  traces.1
common/: Makefile.am  Makefile.in
common/base64/: Makefile.am  Makefile.in  base64.cc  base64.h  base64_tools.cc
common/cJSON/: Makefile.am  Makefile.in  cJSON_tools.cc
common/celib-1.0/doc/: bloomfilter.help  编码详解.txt
common/celib-1.0/src/test/: a.out
common/datrie/: datrie_tool.c
common/febird/: febird
common/febird/febird-0.1/: qmodule.info
common/febird/febird-0.1/include/febird/: bitmap.hpp  circular_queue.hpp  config.hpp  fstring.cpp  fstring.hpp  gold_hash_map.hpp  hash_common.hpp  hash_strmap.hpp  lcast.cpp  lcast.hpp  mempool.hpp  mpoolxx.hpp  node_layout.hpp  num_to_str.cpp  num_to_str.hpp  objbox.hpp  pipeline.cpp  pipeline.hpp  ptree.cpp  radix_sort.cpp  radix_sort.hpp  set_op.hpp  smallmap.hpp  stdtypes.hpp  trb_cxx.cpp  valvec.hpp
common/febird/febird-0.21/include/febird/: bitmap.cpp  bitmap.hpp  config.hpp  fstring.cpp  fstring.hpp  gold_hash_map.hpp  hash_common.hpp  hash_strmap.hpp  lcast.cpp  lcast.hpp  logged_tab.hpp  mempool.hpp  node_layout.hpp  objbox.cpp  parallel_lib.hpp  pass_by_value.hpp  ptree.cpp  ptree.hpp  set_op.hpp  smallmap.hpp  stdtypes.hpp  trb_cxx.cpp  trb_cxx.hpp  valvec.hpp
common/febird/febird-0.21/include/re2/: filtered_re2.h
common/febird/febird-0.21/include/util/: mutex.h
common/febird/febird-0.21/lib/: libtbb.so.2
common/febird/febird-0.21/samples/re2bench/: Makefile  setmatch.cpp
common/hashtable/: HashTable.cpp  HashTable.h  Makefile  hashtable-test.cpp  hashtable.txt
common/http_parser/: HttpParser.cc  HttpParser.h  HttpParser_t.cc  Makefile.am  Makefile.in  chunked_response.txt  http_parser_tools.c  normal_response.txt  t.cc
common/md5/: Makefile.am  Makefile.in  md5.c  md5.h  md5_tools.c
common/nlp/include/: CQueryClassify.h  EasouSeg.h  NLPAnalysis.h  SenType.h  Utility.h  find_syn.h
common/php_serialize/: Makefile  php_ser_str.txt  php_test.cc
common/uri/: Makefile.am  Makefile.in  URI.cpp  URI2.h  query.cpp  url-decode.c  url-parser.c  url_decode.h  url_encode.h  utils.cpp  utils.h
common/utils/: Makefile.in  conn.h  decode.cpp  encode.cpp  io_ops.h  libev_wrapper.h  libevent_wrapper.h  simple_queue.h  str_ops.h  threadpool.h  utils.h
common/xpath/: Makefile.am  Makefile.in
common/xpath/pugixml-1.4/: Makefile.am  Makefile.in  a.html  pugixml.cpp  tpl.m.baidu.com.conf  tpl.m.baidu.com.conf.noua  xpath_tools.cpp
conf/: conf.gflags  spider.gflags  tpls.conf
config/: Makefile.am  Makefile.in  dispatcher.gflags  hosts.txt  page_extractor.gflags  query_client.gflags  search_list_client.gflags  spider.gflags  spider.host.txt  tpl.3g.163.com.conf  tpl.3g.d.cn.conf  tpl.3g.gfan.com.conf  tpl.7723.com.conf  tpl.a.4399.cn.conf  tpl.a.9game.cn.conf  tpl.a.d.cn.conf  tpl.a.gamedog.cn.conf  tpl.a.yruan.com.conf  tpl.app.zol.com.cn.conf  tpl.d.91.com.conf  tpl.g.10086.cn.conf  tpl.g.pconline.com.cn.conf  tpl.game.3g.cn.conf  tpl.liqucn.com.conf  tpl.m.159.com.conf  tpl.m.18183.com.conf  tpl.m.3533.com.conf  tpl.m.520apk.com.conf  tpl.m.91.com.conf  tpl.m.angeeks.com.conf  tpl.m.anruan.com.conf  tpl.m.anzhi.com.conf  tpl.m.anzhuo.com.conf  tpl.m.apk8.com.conf  tpl.m.apkzu.com.conf  tpl.m.apkzu.com.conf.bak  tpl.m.appchina.com.conf  tpl.m.appfun.cn.conf  tpl.m.baidu.com.conf  tpl.m.cnmo.com.conf  (+19 more)
scripts/: Makefile.am  Makefile.in  auto_ssh.sh  auto_ssh_msearch.sh  ctrl.sh  remote_cmds  rsync-tool-single  rsync_spider.sh  run.sh  setenv.sh  spider_deploy.sh  spider_service.sh  spider_service_gen_fetch_urls.py  start.sh  stop_spider.sh  super_remote_cmds.py
src/: Makefile.am  Makefile.in  SpiderResManager.cc  SpiderResManager.h  TimeWait.cc  TimeWait.h  conf.cc  conf.h  dns.cc  dns.h  download.cc  download.h  main.cc  message.cc  message.h  service-main.cc  storage.cc  storage.h
src/client/: Makefile.am  Makefile.in  ThriftClientWrapper.cpp  client.cpp  dispatcher.cpp  query_client.cpp  query_client2.cpp  search_list_client.cpp  thrift_server.h  urls.txt
src/data_merge/: Makefile.am  Makefile.in  baidu.searchlist.json  httpclient.cpp  httpclient.h  main.cpp  run.sh  similarity_calculation.cpp
src/data_merge/.deps/: httpclient.Po  main.Po  similarity_calculation.Po
src/data_merge/php_serialize/: Makefile  num_to_str.cpp  objbox.hpp  ptree.cpp  ptree.hpp
src/data_merge/word2vec/: Makefile  Makefile.am  Makefile.in  README.txt  compute-accuracy.c  ctool_hashmap.c  ctool_hashmap.h  demo-pre.sh  demo-sim.sh  demo-train.sh  demo-word.sh  distance.c  makefile.org  pre_treatment.cpp  sign.h  similarity_calculation.cpp  similarity_calculation.h  word2vec.c
src/data_merge/word2vec/.deps/: compute-accuracy.Po  ctool_hashmap.Po  distance.Po  pre_treatment.Po  similarity_calculation.Po  word-analogy.Po  word2phrase.Po  word2vec.Po
src/dispatcher/: Makefile.am  Makefile.in  dispatcher.cpp  main.cc  multi_client.cpp
src/extractor/: Makefile.am  Makefile.in  a.html  cfg_tpl.h  cfg_tpl_t.cpp  page_extractor.cpp  pugixml_macro.h  run.sh  search_list_client.cpp  spider_service_extractor.cpp  spider_service_extractor.sh  tpl.m.baidu.com.conf  tpls.baidu.searchlist.conf  tpls.conf  xpath_client.cpp  xpath_tools.cpp
src/query_filter/: Makefile.am  Makefile.bak  Makefile.in  query_filter.cpp  query_filter.h
src/spider/: Makefile.am  Makefile.in  SpiderResManager.cc  TimeWait.cc  conf.cc  conf.h  dns.cc  download.cc  main.cc  message.cc  message.h  message.proto  storage.cc
src/thrift/: Makefile.am  Makefile.in  ThriftClientWrapper.cpp  ThriftClientWrapper.h  client.cpp  query-urlencode.py  spider.thrift  urls.txt  webservice_spider_client.cpp
src/uri/: Makefile.am  Makefile.in  URI.cpp  URI.h  URI2.h  fragment.cpp  path.cpp  query.cpp  uri.cpp
test/: Makefile.am  Makefile.in  TimeWait-tools.cc  consistent.h  dns-test.cc  dns-tools.cc  download-tools.cc  hashring_example.cpp  spider-main.cc  storage-test.c  uri-test.cpp  uri-tools.cc  uri_tools.cc
(+295 files in other folders)
