
AC_INIT([simple_spider], [1.0], [fengliangwang@126.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/uri/Makefile
    src/thrift/Makefile
    src/client/Makefile
    src/extractor/Makefile
    common/Makefile
    common/md5/Makefile
    common/utils/Makefile
    common/http_parser/Makefile
    common/cJSON/Makefile
    common/xpath/Makefile
    common/xpath/pugixml-1.4/Makefile
    test/Makefile
])
AC_OUTPUT

