
AC_INIT([simple_spider], [1.0], [fengliangwang@126.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LN_S
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    common/Makefile
    common/md5/Makefile
    common/uri/Makefile
    common/utils/Makefile
    common/http_parser/Makefile
    common/cJSON/Makefile
    common/base64/Makefile
    common/xpath/Makefile
    common/xpath/pugixml-1.4/Makefile
    src/Makefile
    src/thrift/Makefile
    src/spider/Makefile
    src/client/Makefile
    src/extractor/Makefile
    src/data_merge/Makefile
    src/data_merge/word2vec/Makefile
    scripts/Makefile
    config/Makefile
    test/Makefile
])
AC_OUTPUT

